a lot of progress...

--- a/src/assets/scss/abstract/_variables.scss
+++ b/src/assets/scss/abstract/_variables.scss
@@ -16,3 +16,11 @@ $secondary-white: #F5F7FB;
 $dark-gray: #514E4E;
 $secondary-blue: #3A8BBB;
 $light-gray: #DDDDDD;
+$border-gray: #C4C4C4;
+$tertiary-blue: #367CA6;
+$primary-red: #FF002F;
+$black: #000000;
+
+// Z-INDEX
+$z-idex-lift: 9;
+$z-index-next: 99;
