--- a/src/components/Marketing/AppDownload/index.scss
+++ b/src/components/Marketing/AppDownload/index.scss
@@ -21,7 +21,7 @@
 .app-download-footer {
   background-color: $secondary-white;
   position: absolute;
-  margin-top: 290px;
+  margin-top: 290px !important;
   height: 220px;
 }
 
