--- a/src/components/common/Player/index.scss
+++ b/src/components/common/Player/index.scss
@@ -41,7 +41,7 @@
 
 .player-duration-wrapper {
   width: 100%;
-  max-width: 600px;
+  // max-width: 600px;
   padding: 0 25px;
 }
 
@@ -52,5 +52,20 @@
 
 .player-menu-wrapper {
   margin-left: 50px;
+}
+
+.pause-btn-wrapper {
+  display: flex;
+  height: 20px;
+  width: 20px;
+  justify-content: center;
+  align-items: center;
+  background: $white;
+  border-radius: 10px;
+}
+
+.player-time {
+  padding: 5px 10px;
+  color: $white;
 }
 
