dropdown menu functionality...

--- a/src/assets/scss/abstract/_variables.scss
+++ b/src/assets/scss/abstract/_variables.scss
@@ -20,6 +20,7 @@ $border-gray: #C4C4C4;
 $tertiary-blue: #367CA6;
 $primary-red: #FF002F;
 $black: #000000;
+$secondary-black: #0C1A22;
 
 // Z-INDEX
 $z-idex-lift: 9;
