link up authentication pages to home screen...

--- a/src/components/common/TextInput/index.scss
+++ b/src/components/common/TextInput/index.scss
@@ -6,6 +6,7 @@
   border-radius: 20px;
   border: 1px solid $border-gray;
   margin: 8px 0;
+  overflow: hidden;
   .text-input-wrapper {
     background-color: transparent;
     padding: 1px 20px;
