--- a/src/components/common/AppHeader/index.scss
+++ b/src/components/common/AppHeader/index.scss
@@ -15,7 +15,11 @@
   color: $white;
   padding: 0 1rem;
   span {
-    padding: 0 1rem;
+    padding: 0 0.5rem;
+    width: 14ch;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
