--- a/src/components/common/Button/index.scss
+++ b/src/components/common/Button/index.scss
@@ -17,6 +17,9 @@
   border: 1px solid $secondary-green;
   color: $white;
   justify-content: center;
+  align-items: center;
+  display: flex;
+  padding: 0rem 1rem;
   &:focus {
     outline: none;
   }
