--- a/src/components/common/Feature/index.scss
+++ b/src/components/common/Feature/index.scss
@@ -4,6 +4,7 @@
   position: relative;
   min-height: 185px;
   min-width: 300px;
+  max-width: 450px;
   height: 100%;
   margin-left: 1rem;
   margin-bottom: 1rem; 
