--- a/src/containers/Home/index.scss
+++ b/src/containers/Home/index.scss
@@ -5,11 +5,12 @@
   height: 100%;
   background-color: $primary-green;
   padding: 1rem 2.5rem;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .home-tabs-wrapper {
-  margin: 2rem 0rem;
+  margin-top: 9rem;
+  margin-bottom: 2rem;
 }
 
 .home-heading {
