search in header...

--- a/src/assets/scss/abstract/_variables.scss
+++ b/src/assets/scss/abstract/_variables.scss
@@ -23,5 +23,6 @@ $black: #000000;
 $secondary-black: #0C1A22;
 
 // Z-INDEX
-$z-idex-lift: 9;
+$z-index-lift: 9;
 $z-index-next: 99;
+$z-index-lifter: 999;
