--- a/src/components/common/modals/ModalRoot/index.scss
+++ b/src/components/common/modals/ModalRoot/index.scss
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: $z-index-next;
+  z-index: $z-index-lifter;
   color: $tertiary-gray;
   font-family: Poppins;
   font-weight: 500;
