remmove env variable

--- a/src/assets/scss/abstract/_variables.scss
+++ b/src/assets/scss/abstract/_variables.scss
@@ -3,6 +3,8 @@ $heading: 24px;
 $title: 18px;
 $normal-text: 14px;
 
+$margin-top: 2.5rem;
+
 // COLORS
 $primary-green: #1A394B;
 $secondary-green: #66CCCC;
@@ -21,6 +23,7 @@ $tertiary-blue: #367CA6;
 $primary-red: #FF002F;
 $black: #000000;
 $secondary-black: #0C1A22;
+$pink: #EA4C89;
 
 // Z-INDEX
 $z-index-lift: 9;
