--- a/src/components/common/AppHeader/index.scss
+++ b/src/components/common/AppHeader/index.scss
@@ -1,10 +1,16 @@
 @import '$assets/scss/main.scss';
 
 .app-header-wrapper {
-  height: 40px;
-  padding: 4rem 0;
   position: absolute;
-  width: calc(100% - 270px);
+  top: 0;
+  height: 40px;
+  padding: 2rem 2.5rem;
+  width: calc(100% - 220px);
+  background-color: $primary-green;
+  z-index: $z-index-lifter;
+  &.search-inactive {
+    background-color: transparent;
+  }
 }
 
 .app-header-avatar {
