--- a/src/containers/Home/index.scss
+++ b/src/containers/Home/index.scss
@@ -1,11 +1,7 @@
 @import '$assets/scss/main.scss';
 
-.content {
-  width: 100%;
-  height: 100%;
-  background-color: $primary-green;
-  padding: 1rem 2.5rem;
-  overflow-x: hidden;
+.home-content {
+  padding: 0 2.5rem;
 }
 
 .home-tabs-wrapper {
