--- a/src/components/common/TextArea/index.scss
+++ b/src/components/common/TextArea/index.scss
@@ -13,6 +13,7 @@
     background-color: transparent;
     padding: 1px 20px;
     width: 100%;
+    height: 100%;
     border: none;
     &:focus {
       outline: none;
