--- a/src/containers/OnBoarding/index.scss
+++ b/src/containers/OnBoarding/index.scss
@@ -6,6 +6,10 @@
   background-color: $primary-green;
 }
 
+.onboarding-content {
+  margin-top: 80px;
+}
+
 .onboarding-menus {
   border-bottom: 4px solid $secondary-green;
   padding-top: 4rem;
