--- a/src/components/common/AppHeader/index.scss
+++ b/src/components/common/AppHeader/index.scss
@@ -4,7 +4,7 @@
   position: absolute;
   top: 0;
   height: 40px;
-  padding: 2rem 2.5rem;
+  padding: 2.5rem;
   width: calc(100% - 220px);
   background-color: $primary-green;
   z-index: $z-index-lifter;
