artist creation success...

--- a/src/containers/Media/NewMedia/index.scss
+++ b/src/containers/Media/NewMedia/index.scss
@@ -2,7 +2,7 @@
 
 .new-media-wrapper {
   position: relative;
-  background-color: $secondary-white;
+  background-color: $white;
   height: 100%;
   margin-top: 3rem;
   padding: 2rem;
