end to end artist creation...

--- a/src/components/common/AvatarInput/index.scss
+++ b/src/components/common/AvatarInput/index.scss
@@ -15,7 +15,7 @@
   position: absolute;
   bottom: 5px;
   border: 0;
-  background-color: #FFFFFF;
+  background-color: $light-gray;
   border-radius: 9px;
   height: 40px;
   padding: 0 10px;
