--- a/src/containers/Artist/ViewArtist/index.scss
+++ b/src/containers/Artist/ViewArtist/index.scss
@@ -1,7 +1,10 @@
 @import '$assets/scss/main.scss';
 
-.page-container {
+.artist-view-container {
   margin-top: $margin-top;
+  p {
+    color: $white !important;
+  }
 }
 
 .artist-cover-wrapper {
@@ -35,7 +38,7 @@
 .artist-subtitle {
   font-family: Roboto;
   font-weight: 700;
-  font-size: 18px;
+  font-size: $title;
   border-bottom: 3px solid $pink;
   color: $white;
   text-shadow: 0px 0px $black;
