--- a/src/components/common/SearchResult/index.scss
+++ b/src/components/common/SearchResult/index.scss
@@ -17,10 +17,14 @@
 }
 
 .search-result-wrapper {
-  margin-top: 120px;
-  width: calc(100vw - 270px);
+  margin-top: 50px;
+  width: calc(100vw - 220px);
   position: absolute;
   z-index: $z-index-next;
   background-color: $primary-green;
-  height: calc(100vh - 140px);
+  height: calc(100vh - 120px);
+  padding: 40px;
+  p {
+    color: $white;
+  }
 }
