--- a/src/components/common/Feature/index.scss
+++ b/src/components/common/Feature/index.scss
@@ -33,3 +33,11 @@
   align-items: flex-end;
   padding: 0.5rem 1rem;
 }
+
+.feature-play-btn {
+  background-color: transparent;
+  border: none;
+  &:focus {
+    outline: 0;
+  }
+}
