--- a/src/containers/Media/NewMedia/index.module.scss
+++ b/src/containers/Media/NewMedia/index.module.scss
@@ -1,6 +1,6 @@
 @import '$assets/scss/main.scss';
 
-.new-media-wrapper {
+.newMediaWrapper {
   position: relative;
   background-color: $white;
   height: 100%;
@@ -8,7 +8,7 @@
   padding: 2rem;
 }
 
-.new-media-close-btn {
+.newMediaCloseBtn {
   height: 30px;
   border: none;
   background-color: transparent;
@@ -17,7 +17,7 @@
   }
 }
 
-.cancel-icon {
+.cancelIcon {
   height: 20px;
   width: 20px;
 }
