--- a/src/containers/Media/NewMediaCategory/index.module.scss
+++ b/src/containers/Media/NewMediaCategory/index.module.scss
@@ -1,7 +1,8 @@
 @import '$assets/scss/main.scss';
 
-.onboardingWrapper {
-  height: 100vh;
-  width: 100%;
+.wrapper {
   background-color: $primary-green;
+  width: 100%;
+  height: 100%;
+  margin-top: 5rem;
 }
