media upoad progress

--- a/src/assets/scss/abstract/_variables.scss
+++ b/src/assets/scss/abstract/_variables.scss
@@ -24,6 +24,7 @@ $primary-red: #FF002F;
 $black: #000000;
 $secondary-black: #0C1A22;
 $pink: #EA4C89;
+$primary-light-gray: #F7F5F5;
 
 // Z-INDEX
 $z-index-lift: 9;
