--- a/src/components/common/TopSongs/index.module.scss
+++ b/src/components/common/TopSongs/index.module.scss
@@ -1,6 +1,6 @@
 @import '$assets/scss/main.scss';
 
-.how-it-works-title {
+.topSongsTitle {
   color: $tertiary-gray;
   font-family: Poppins;
   font-weight: 500;
