--- a/src/components/common/SearchResult/index.module.scss
+++ b/src/components/common/SearchResult/index.module.scss
@@ -1,6 +1,6 @@
 @import '$assets/scss/main.scss';
 
-.search-result-item {
+.searchResultItem {
   border-bottom: 1px solid rgba(195, 195, 195, 0.3);
   padding: 1rem 0;
   width: 360px;
@@ -10,13 +10,13 @@
   }
 }
 
-.search-result-image {
+.searchResultImage {
   height: 75px;
   width: 75px;
   margin-right: 15px;
 }
 
-.search-result-wrapper {
+.searchResultWrapper {
   margin-top: 50px;
   width: calc(100vw - 220px);
   position: absolute;
@@ -27,4 +27,11 @@
   p {
     color: $white;
   }
+}
+
+.heading {
+  font-weight: 400;
+  font-family: Montserrat;
+  font-size: 16px;
+  color: $white;
 }
