--- a/src/components/common/Tabs/index.module.scss
+++ b/src/components/common/Tabs/index.module.scss
@@ -1,6 +1,6 @@
 @import '$assets/scss/main.scss';
 
-.tab-line {
+.tabLine {
   border-bottom: 1px solid $secondary-green;
   margin-top: -2.5px;
 }
