--- a/src/components/common/TextArea/index.module.scss
+++ b/src/components/common/TextArea/index.module.scss
@@ -1,6 +1,6 @@
 @import '$assets/scss/main.scss';
 
-.form-text-area-wrapper {
+.formTextAreaWrapper {
   width: 100%;
   font-size: 14px;
   color: $secondary-black;
@@ -9,14 +9,15 @@
   margin: 8px 0;
   border-radius: 20px;
   border: 1px solid $border-gray;
-  .form-text-area {
-    background-color: transparent;
-    padding: 5px 20px;
-    width: 100%;
-    height: 100%;
-    border: none;
-    &:focus {
-      outline: none;
-    }
+}
+
+.formTextArea {
+  background-color: transparent;
+  padding: 5px 20px;
+  width: 100%;
+  height: 100%;
+  border: none;
+  &:focus {
+    outline: none;
   }
 }
