--- a/src/containers/Marketing/index.module.scss
+++ b/src/containers/Marketing/index.module.scss
@@ -16,6 +16,11 @@
   background-color: $white;
 }
 
+.hotItWorksPane {
+  padding: 5rem 0;
+  background-color: $secondary-white;
+}
+
 .howItWorksTitle {
   padding-top: 8rem;
   padding-bottom: 8rem;
