--- a/src/containers/OnBoarding/index.module.scss
+++ b/src/containers/OnBoarding/index.module.scss
@@ -1,7 +1,7 @@
 @import '$assets/scss/main.scss';
 
 .onboardingWrapper {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background-color: $primary-green;
 }
