--- a/src/containers/Success/index.module.scss
+++ b/src/containers/Success/index.module.scss
@@ -1,7 +1,7 @@
 @import '$assets/scss/main.scss';
 
 .successWrapper {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background-color: $white;
   padding-top: 8rem;
