--- a/src/assets/scss/abstract/_variables.scss
+++ b/src/assets/scss/abstract/_variables.scss
@@ -23,6 +23,7 @@ $tertiary-blue: #367CA6;
 $primary-red: #FF002F;
 $black: #000000;
 $secondary-black: #0C1A22;
+$tertiary-black: #34353D;
 $pink: #EA4C89;
 $primary-light-gray: #F7F5F5;
 
