first draft with comments...

--- a/src/containers/Insights/index.module.scss
+++ b/src/containers/Insights/index.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   position: relative;
-  background-color: #F7F5F5;
+  background-color: $primary-light-gray;
   min-height: 100%;
   margin-top: 1rem !important;
   padding: 1rem 2rem 10rem 2rem;
