--- a/src/containers/Media/ViewMedia/index.module.scss
+++ b/src/containers/Media/ViewMedia/index.module.scss
@@ -1,5 +1,13 @@
 @import '$assets/scss/main.scss';
 
+.container {
+  position: relative;
+  background-color: $primary-light-gray;
+  min-height: 100%;
+  margin-top: 4rem !important;
+  padding: 4rem 2rem 10rem 2rem;
+}
+
 .commentsWrapper {
   flex: 1;
 }
