--- a/src/components/common/SideMenu/index.module.scss
+++ b/src/components/common/SideMenu/index.module.scss
@@ -3,8 +3,8 @@
 .sideMenu {
   position: relative;
   background-color: $black;
-  width: 220px;
   height: 100%;
+  width: 100%;
   padding: 3rem 1rem 1rem 0rem;
   overflow: auto;
 }
@@ -18,7 +18,8 @@
 }
 
 .sideMenusWrapper {
-  margin-top: 8rem;
+  position: relative;
+  margin-top: 4rem;
   min-height: 100vh;
 }
 
@@ -60,10 +61,9 @@
 }
 
 .logoWrapper {
-  position: fixed;
   background-color: #000000;
   width: 220px;
-  height: 10rem;
+  height: 5rem;
   top: 0;
   padding-top: 4rem;
 }
