--- a/src/containers/Main/index.module.scss
+++ b/src/containers/Main/index.module.scss
@@ -11,10 +11,28 @@
 
 .homeFooter {
   position: absolute;
-  z-index: $z-index-lifter;
+  z-index: $z-index-next;
   width: 100%;
   bottom: 0;
+  overflow: hidden;
 }
 
 .sideMenuWrapper {
+  width: 220px;
+}
+
+.sideMenuMobile {
+  position: absolute;
+  top: 70px;
+  height: 0;
+  width: 100%;
+  z-index: $z-index-lifter;
+  overflow: hidden;
+  transition: transform 0.3s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.3s cubic-bezier(0.77,0.2,0.05,1.0),
+              height 0.5s ease;
+}
+
+.sideMenuActive {
+  height: 100%;
 }
