use range slider instead of GSAP

--- a/src/assets/scss/abstract/_variables.scss
+++ b/src/assets/scss/abstract/_variables.scss
@@ -26,6 +26,7 @@ $secondary-black: #0C1A22;
 $tertiary-black: #34353D;
 $pink: #EA4C89;
 $primary-light-gray: #F7F5F5;
+$secondary-light-gray: #F1F1F1;
 
 // Z-INDEX
 $z-index-lift: 9;
