cover upload + profile fix and responsiveness

--- a/src/components/common/AvatarInput/index.module.scss
+++ b/src/components/common/AvatarInput/index.module.scss
@@ -1,7 +1,7 @@
 @import '$assets/scss/main.scss';
 
 .avatarInputWrapper {
-  height: 200px;
+  height: 100%;
   width: 100%;
   border: 2px solid $secondary-gray;
   position: relative;
