--- a/src/containers/Artist/ViewArtist/index.module.scss
+++ b/src/containers/Artist/ViewArtist/index.module.scss
@@ -1,33 +1,33 @@
 @import '$assets/scss/main.scss';
 
-.artist-view-container {
+.artistViewContainer {
   margin-top: $margin-top;
   p {
     color: $white !important;
   }
 }
 
-.artist-cover-wrapper {
+.artistCoverWrapper {
   height: 350px;
   width: 100%;
 }
 
-.artist-header-wrapper {
+.artistHeaderWrapper {
   position: relative;
   top: -60px;
   padding: 0 4rem;
 }
 
-.artist-header-infopane {
+.artistHeaderInfopane {
   flex: 2;
   padding: 0 2rem;
 }
 
-.artist-header-actionpane {
+.artistHeaderActionpane {
   flex: 1;
 }
 
-.artist-title {
+.artistTitle {
   font-family: Roboto;
   font-weight: 700;
   font-size: 25px;
@@ -35,15 +35,16 @@
   text-shadow: 0px 0px 2px $black;
 }
 
-.artist-subtitle {
+.artistSubtitle {
   font-family: Roboto;
   font-weight: 700;
   font-size: $title;
   border-bottom: 3px solid $pink;
   color: $white;
   text-shadow: 0px 0px $black;
+  width: 50px;
 }
 
-.artist-action-icon {
+.artistActionIcon {
   width: 20px;
 }
