--- a/src/components/common/Player/index.module.scss
+++ b/src/components/common/Player/index.module.scss
@@ -1,59 +1,60 @@
 @import '$assets/scss/main.scss';
 
-.player-wrapper {
+.playerWrapper {
   height: 60px;
   background-color: $primary-blue;
   padding: 5px 2rem;
 }
 
-.player-name-wrapper {
+.playerNameWrapper {
   color: $white;
 }
 
-.player-avatar {
+.playerAvatar {
   height: 40px;
   width: 40px;
   border-radius: 20px;
 }
 
-.player-btn {
+.playerBtn {
   width: 30px;
   background-color: transparent;
   border: none;
   &:focus {
     outline: none;
   }
-  &.player-volume-btn {
-    height: 100%;
-    position: relative;
-    top: -5px;
-    img {
-      height: 15px;
-    }
-  } 
 }
 
-.player-slider-wrapper {
-  flex: 1;
+.playerVolumeBtn {
+  height: 100%;
+  position: relative;
+  top: -5px;
+  img {
+    height: 15px;
+  }
+}
+
+.playerSliderWrapper {
+  flex-grow: 1;
   height: 100%;
   padding-top: 10px;
 }
 
-.player-duration-wrapper {
+.playerDurationWrapper {
   width: 100%;
   // max-width: 600px;
   padding: 0 25px;
 }
 
-.player-volume-wrapper {
+.playerVolumeWrapper {
   width: 100px;
   height: 100%;
 }
 
-.player-menu-wrapper {
+.playerMenuWrapper {
 }
 
-.pause-btn-wrapper {
+.pauseBtnWrapper {
   display: flex;
   height: 20px;
   width: 20px;
@@ -63,7 +64,7 @@
   border-radius: 10px;
 }
 
-.player-time {
+.playerTime {
   padding: 5px 10px;
   color: $white;
 }
