--- a/src/components/common/SearchResult/index.module.scss
+++ b/src/components/common/SearchResult/index.module.scss
@@ -35,8 +35,12 @@
 }
 
 .heading {
-  font-weight: 400;
-  font-family: Montserrat;
+  font-weight: bold;
   font-size: 16px;
   color: $white;
+}
+
+.isNotActive {
+  background-color: $tertiary-gray;
+  border-color: $tertiary-gray;
 }
