--- a/src/components/media/IndividualPlayer/index.module.scss
+++ b/src/components/media/IndividualPlayer/index.module.scss
@@ -59,10 +59,7 @@
 
 .icon {
   height: 15px;
-}
-
-.playIcon {
-  height: 30px;
+  filter: drop-shadow(0px 0px 1px rgba(0, 0, 0, .7));
 }
 
 .headerIcon {
