--- a/src/components/common/AppHeader/index.module.scss
+++ b/src/components/common/AppHeader/index.module.scss
@@ -3,8 +3,8 @@
 .appHeaderWrapper {
   position: absolute;
   top: 0;
-  height: 40px;
-  padding: 2.5rem;
+  height: 60px;
+  padding: 0.5rem 2.5rem;
   width: calc(100% - 220px);
   background-color: $primary-green;
   z-index: $z-index-lifter;
@@ -50,3 +50,4 @@
     color: $secondary-green;
   }
 }
+
