--- a/src/assets/scss/base/_normalize.scss
+++ b/src/assets/scss/base/_normalize.scss
@@ -3,7 +3,7 @@ body,
 p {
   font-family: Poppins;
   font-size: $normal-text;
-  color: $primary-gray;
+  color: $tertiary-gray;
 }
 
 html, body {
