--- a/src/components/common/Preview/index.module.scss
+++ b/src/components/common/Preview/index.module.scss
@@ -1,26 +1,20 @@
-.preview-wrapper {
-  height: 120px;
-  width: 120px;
+.previewWrapper {
   margin-right: 2rem;
   margin-bottom: 2rem;
 }
 
-.preview-wide {
-  width: 180px;
-}
-
-.preview-bkg-wrapper {
+.previewBkgWrapper {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 200px;
   width: 100%;
   overflow: hidden;
   margin-bottom: 1.5rem;
 }
 
-.preview-action-btn {
+.previewActionBtn {
   background-color: transparent;
   position: absolute;
   z-index: 99;
@@ -30,7 +24,15 @@
   }
 }
 
-.preview-action-icon {
+.previewActionIcon {
   height: 50px;
   width: 50px;
+}
+
+.description {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* number of lines to show */
+  -webkit-box-orient: vertical;
 }
