marketing website improvements...

--- a/src/components/forms/SocialInput/index.module.scss
+++ b/src/components/forms/SocialInput/index.module.scss
@@ -1,8 +1,8 @@
-.social-input-icon {
+.socialInputIcon {
   height: 20px;
   margin-right: 10px;
 }
 
-.social-input-text {
+.socialInputText {
   margin-right: 15px;
 }
