--- a/src/components/modals/Alert/index.module.scss
+++ b/src/components/modals/Alert/index.module.scss
@@ -1,11 +1,11 @@
 @import '$assets/scss/main.scss';
 
-.alert-icon {
+.alertIcon {
   margin-right: 4rem;
   margin-left: 4rem;
 }
 
-.alert-sign-mk {
+.alertSignMk {
   color: $secondary-green;
   border: none;
   width: auto;
