--- a/src/components/marketing-site/HowItWorks/index.module.scss
+++ b/src/components/marketing-site/HowItWorks/index.module.scss
@@ -1,3 +1,12 @@
 .howItWorksFeature {
   max-width: 420px;
 }
+
+.panel {
+  margin: 2rem 0;
+  padding: 3rem 1rem;
+}
+
+.panelHeader {
+  font-size: 1.6rem;
+}
