--- a/src/components/media/VideoPlayer/index.module.scss
+++ b/src/components/media/VideoPlayer/index.module.scss
@@ -1,3 +1,5 @@
+@import '$assets/scss/main.scss';
+
 .playerWrapper {
   position: relative;
   padding-top: 56.25% /* Player ratio: 100 / (1280 / 720) */
@@ -7,4 +9,11 @@
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.playerBar {
+  height: 60px;
+  background-color: $primary-blue;
 }
