--- a/src/components/common/Preview/index.module.scss
+++ b/src/components/common/Preview/index.module.scss
@@ -29,6 +29,15 @@
   width: 50px;
 }
 
+.title {
+  font-size: 1.4rem;
+  font-weight: bold;
+  margin-bottom: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+}
+
 .description {
   overflow: hidden;
   text-overflow: ellipsis;
