--- a/src/components/common/Preview/index.module.scss
+++ b/src/components/common/Preview/index.module.scss
@@ -3,6 +3,13 @@
   margin-bottom: 2rem;
 }
 
+.temp {
+  position: relative;
+  width: 300px !important;
+  float: left;
+  margin-right: 1.5rem;
+}
+
 .previewBkgWrapper {
   position: relative;
   display: flex;
