changes...git branch

--- a/src/components/marketing-site/AppDownload/index.module.scss
+++ b/src/components/marketing-site/AppDownload/index.module.scss
@@ -7,6 +7,9 @@
 
 .appDownloadHeader {
   color: $primary-blue;
+  font-size: 18px;
+  font-family: Montserrat;
+  font-weight: bold;
 }
 
 .storeIcon {
