--- a/src/components/marketing-site/List/index.module.scss
+++ b/src/components/marketing-site/List/index.module.scss
@@ -12,6 +12,8 @@
 
 .listHeader {
   color: $secondary-green;
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
 }
 
 .listContentWrapper {
@@ -19,4 +21,5 @@
 }
 
 .listDescription {
+  color: $white;
 }
