--- a/src/containers/Marketing/index.module.scss
+++ b/src/containers/Marketing/index.module.scss
@@ -73,3 +73,10 @@
   right: 1rem;
   margin-top: -0.5rem;
 }
+
+.topPane {
+  color: $primary-blue;
+  font-size: 18px;
+  font-family: Montserrat;
+  font-weight: bold;
+}
