--- a/src/components/common/Scroller/index.module.scss
+++ b/src/components/common/Scroller/index.module.scss
@@ -8,11 +8,15 @@
   box-sizing: border-box;
 }
 
+.collapsed {
+  height: 40px !important;
+}
+
 .wrapper {
   position: relative;
   width: 100%;
   height: 300px;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .titleWrapper {
