--- a/src/components/media/VideoPlayer/index.module.scss
+++ b/src/components/media/VideoPlayer/index.module.scss
@@ -2,7 +2,8 @@
 
 .playerWrapper {
   position: relative;
-  padding-top: 56.25% /* Player ratio: 100 / (1280 / 720) */
+  padding-top: 56.25% /* Player ratio: 100 / (1280 / 720) */;
+  height: 80%;
 }
 
 .reactPlayer {
@@ -10,7 +11,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 80%;
 }
 
 .playerBar {
