--- a/src/containers/Main/index.module.scss
+++ b/src/containers/Main/index.module.scss
@@ -11,7 +11,7 @@
 
 .homeFooter {
   position: fixed;
-  z-index: $z-index-next;
+  z-index: $z-index-last;
   width: 100%;
   bottom: 0;
   overflow: hidden;
