--- a/src/containers/Main/index.module.scss
+++ b/src/containers/Main/index.module.scss
@@ -26,7 +26,7 @@
   top: 70px;
   height: 0;
   width: 100%;
-  z-index: $z-index-lifter;
+  z-index: $z-index-last + 10;
   overflow: hidden;
   transition: transform 0.3s cubic-bezier(0.77,0.2,0.05,1.0),
               background 0.3s cubic-bezier(0.77,0.2,0.05,1.0),
