Designed slider list layout -> Add trash icon to icons -> Styled the slider list view

--- a/src/containers/Slider/SliderList/index.module.scss
+++ b/src/containers/Slider/SliderList/index.module.scss
@@ -4,3 +4,16 @@
     margin: 5rem $margin-top;
     color: $white;
 }
+
+.card {
+    width: 100%;
+    background-color: rgba($color: $black, $alpha: 0.5);
+    display: flex;
+    height: 150px;
+    justify-content: center;
+    align-items: center;
+}
+
+.actions a {
+    margin: 0.5rem;
+}
