--- a/src/components/common/Carousel/index.module.scss
+++ b/src/components/common/Carousel/index.module.scss
@@ -1,30 +1,87 @@
 @import '$assets/scss/main.scss';
 
+.container {
+    position: relative;
+}
+
 .wrapper {
     height: 600px;
     overflow: hidden;
     background-position: center;
     background-size: cover;
-    transition: all ease-in-out 2s;
+    transition: all ease-in-out 0.5s !important;
+}
+
+.item {
+    position: relative;
+    transition: all ease-in 0.5s;
 }
 
 .active {
     position: relative;
     left: 0;
+    flex: 1;
+    min-width: max-content;
 }
 
-.next{
-    position: absolute;
-    top: 25%;
-    left: 200vw;
-    opacity: 0;
-    visibility: hidden; 
+.next {
+    left: 100vw;
+    width: 0;
 }
 
-.previous{    
+.previous {  
+    left: -100vw;
+    width: 0;
+}
+
+.prevButton {
     position: absolute;
-    top: 25%;
-    left: -200vw;
-    opacity: 0;
-    visibility: hidden; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    left: 0;
+    top: 0;
+    height: 100%;
+    padding: 0 $margin-top;
+    background: rgb(255,255,255);
+    background: linear-gradient(270deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.5) 100%);    
+}
+
+.nextButton {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    right: 0;
+    top: 0;
+    height: 100%;
+    padding: 0 $margin-top;
+    background: rgb(255,255,255);
+    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.5) 100%);
+}
+
+.indicators {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    z-index: 2;
+    padding: 10px 0;
+    
+    div {
+        border-radius: 20px;
+        padding: 1rem;
+        background-color: rgba($color: $black, $alpha: 0.3);
+        margin-right: 5px;
+    }
+
+    div:hover {
+        background-color: rgba($color: $black, $alpha: 0.8);
+        cursor: pointer;
+    }
+
+    .solid {
+        background-color: rgba($color: $black, $alpha: 1);
+    }
 }
