--- a/src/components/common/Carousel/index.module.scss
+++ b/src/components/common/Carousel/index.module.scss
@@ -4,8 +4,10 @@
     position: relative;
 }
 
+$slider-height: 600px;
+
 .wrapper {
-    height: 600px;
+    height: $slider-height;
     overflow: hidden;
     background-position: center;
     background-size: cover;
@@ -84,4 +86,16 @@
     .solid {
         background-color: rgba($color: $black, $alpha: 1);
     }
+}
+
+.loader {
+    position: absolute;
+    background-color: rgba($color: #000000, $alpha: 0.8);
+    z-index: 10;
+    height: 100%;
+    width:100%;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
