--- a/src/components/common/Carousel/index.module.scss
+++ b/src/components/common/Carousel/index.module.scss
@@ -1,10 +1,12 @@
 @import '$assets/scss/main.scss';
 
+$slider-height: 600px;
+
 .container {
     position: relative;
+    width: 100%;
+    height: $slider-height;
 }
-
-$slider-height: 600px;
 
 .wrapper {
     height: $slider-height;
