--- a/src/components/common/Carousel/index.module.scss
+++ b/src/components/common/Carousel/index.module.scss
@@ -5,14 +5,12 @@ $slider-height: 600px;
 .container {
     position: relative;
     width: 100%;
-    height: $slider-height;
+    overflow: hidden;
 }
 
 .wrapper {
-    height: $slider-height;
+    width: 100%;
     overflow: hidden;
-    background-position: center;
-    background-size: cover;
     transition: all ease-in-out 0.5s !important;
 }
 
