--- a/src/components/common/AppHeader/index.module.scss
+++ b/src/components/common/AppHeader/index.module.scss
@@ -7,7 +7,8 @@
   padding: 0.5rem 2.5rem;
   width: calc(100% - 220px);
   background-color: $primary-green;
-  z-index: $z-index-lifter;
+  z-index: 100;
+  box-shadow: 3px 3px 3px #222;
 }
 
 .mobile {
