--- a/src/components/common/Player/index.module.scss
+++ b/src/components/common/Player/index.module.scss
@@ -2,8 +2,10 @@
 
 .playerWrapper {
   height: 60px;
-  background-color: $primary-blue;
+  // background-color: $primary-blue;
+  background-image: linear-gradient(#252, #373, #373, #252);
   padding: 5px 2rem;
+  position: relative;
 }
 
 .playerNameWrapper {
@@ -45,9 +47,6 @@
   height: 100%;
 }
 
-.playerMenuWrapper {
-}
-
 .pauseBtnWrapper {
   display: flex;
   height: 20px;
@@ -63,3 +62,21 @@
   color: $white;
 }
 
+.size17 {
+  width: 17px;
+}
+
+.playList {
+  position: absolute;
+  display: block;
+  bottom: 65px;
+  right: 5px;
+  visibility: visible;
+  opacity: 1;
+  transition: all 0.3s;
+}
+
+.playListHidden {
+  visibility: hidden;
+  opacity: 0;
+}
