--- a/src/components/common/Scroller/index.module.scss
+++ b/src/components/common/Scroller/index.module.scss
@@ -10,14 +10,43 @@
 
 .collapsed {
   height: 40px !important;
+  overflow: hidden;
 }
 
 .wrapper {
   position: relative;
   width: 100%;
-  height: 300px;
-  overflow: scroll;
+  height: 330px;
+  overflow-x: auto;
 }
+
+//////////////////////// Add ///////////////////////////
+.no_media {
+  font-size: 25px;
+  text-align: center;
+  color: #777 !important;
+}
+
+.wrapper::-webkit-scrollbar {
+  width: 20px;
+}
+
+.wrapper::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+.wrapper::-webkit-scrollbar-thumb {
+  background: #333;
+  border: 1px solid black;
+  border-radius: 20px;
+}
+
+.wrapper::-webkit-scrollbar-corner {
+  background: transparent !important;
+}
+
+//////////////////////// END ///////////////////////////
 
 .titleWrapper {
   flex: 1;
