--- a/src/containers/Main/index.module.scss
+++ b/src/containers/Main/index.module.scss
@@ -9,34 +9,13 @@
   overflow-x: hidden;
 }
 
-///////////////// ADD /////////////////////
-
-.content::-webkit-scrollbar {
-  width: 15px;
+.homeFooter {
+  position: fixed;
+  z-index: $z-index-last;
+  width: 100%;
+  bottom: 0;
+  overflow: hidden;
 }
-
-.content::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
-}
-
-.content::-webkit-scrollbar-thumb {
-  background: #333;
-  border: 1px solid black;
-  border-radius: 20px;
-}
-
-.content::-webkit-scrollbar-thumb:hover {
-  background: #666;
-}
-
-.content::-webkit-scrollbar-corner {
-  background: transparent !important;
-}
-
-///////////////// END ////////////////////
-
-
 
 .sideMenuWrapper {
   width: 220px;
@@ -56,21 +35,4 @@
 
 .sideMenuActive {
   height: 100%;
-}
-
-
-.homeFooter {
-  position: fixed;
-  z-index: $z-index-last;
-  width: 100%;
-  bottom: 0;
-  transition: all 0.3s;
-}
-
-.hideFooter {
-  bottom: -55px;
-}
-
-.homeFooter:hover {
-  bottom: 0;
 }
