--- a/src/components/common/SideMenu/index.module.scss
+++ b/src/components/common/SideMenu/index.module.scss
@@ -2,40 +2,12 @@
 
 .sideMenu {
   position: relative;
-  background-color: #222;
+  background-color: $black;
   height: 100%;
   width: 100%;
   padding: 3rem 1rem 1rem 0rem;
-  overflow-y: auto;
-  overflow-x: hidden
+  overflow: auto;
 }
-
-//////////////////// ADD ///////////////////////
-.sideMenu::-webkit-scrollbar {
-  width: 15px;
-}
-
-.sideMenu::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
-}
-
-.sideMenu::-webkit-scrollbar-thumb {
-  background: #333;
-  border: 1px solid black;
-  border-radius: 20px;
-}
-
-.sideMenu::-webkit-scrollbar-thumb:hover {
-  background: #666;
-}
-
-.sideMenu::-webkit-scrollbar-corner {
-  background: transparent !important;
-}
-
-////////////////////// END //////////////////////
-
 
 // TODO: move typography into scss files
 .headerTitle {
@@ -92,7 +64,7 @@
 }
 
 .logoWrapper {
-  background-color: #222;
+  background-color: #000000;
   width: 220px;
   height: 5rem;
   top: 0;
